# Kristina_Kuli-ova

./: .env  .gitignore  .gitlab-ci.yml  README.md  docker-stack.yml  tasks.md
app/: Dockerfile  Makefile  manage.py  pyproject.toml
app/tests/: test_django_app.py
app/tt_web_app/: __init__.py  asgi.py  celery.py  settings.py  wsgi.py
nginx/: Dockerfile
